--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
 
           <div class="col-xl-5 content">
             <h3>Tentang Kawan Kampus</h3>
-            <h2>Kawan Kampus adalah sarana untuk mahasiswa dan alumni untuk pembelajaran</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur sed labore minus illo
-              itaque veritatis, maxime possimus iure alias dolores, veniam dignissimos consequatur fugiat perferendis
-              quis, in soluta. Odio.</p>
-            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+            <h2>Kawan Kampus adalah ruang kolaborasi mahasiswa dan alumni untuk berkembang bersama.</h2>
+            <p>Kawan Kampus hadir sebagai sarana digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus
+              dalam satu ekosistem pembelajaran. Melalui platform ini, kami membantu mahasiswa menemukan inspirasi,
+              berbagi pengalaman, dan memperluas jejaring profesional. Tidak hanya itu, alumni juga dapat berkontribusi
+              dengan berbagi ilmu, membuka peluang karir, serta menjadi mentor bagi generasi berikutnya.</p>
+            <a href="#" class="read-more"><span>Bergabung sekarang</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
           <div class="col-xl-7">
@@ -147,32 +148,36 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
-                  <h3>Eius provident</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                  <h3>Jejaring Kampus</h3>
+                  <p>Bangun relasi dengan mahasiswa dan alumni lintas jurusan serta angkatan. Dapatkan koneksi yang
+                    bermanfaat untuk karir dan pengembangan diri.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
-                  <h3>Rerum aperiam</h3>
-                  <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
+                  <h3>Belajar & Berbagi</h3>
+                  <p>Temukan berbagai sumber ilmu, diskusi komunitas, hingga pengalaman alumni. Belajar jadi lebih mudah
+                    dengan dukungan dari sesama.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
-                  <h3>Veniam omnis</h3>
-                  <p>Omnis perferendis molestias culpa sed. Recusandae quas possimus. Quod consequatur corrupti</p>
+                  <h3>Peluang Karir</h3>
+                  <p>Akses informasi magang, kerja, hingga project kolaborasi dari alumni dan mitra industri. Jadikan
+                    kampus sebagai gerbang menuju dunia kerja.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
-                  <h3>Delares sapiente</h3>
-                  <p>Sint et dolor voluptas minus possimus nostrum. Reiciendis commodi eligendi omnis quideme lorenda
+                  <h3>Kolaborasi & Inovasi</h3>
+                  <p>Wadah untuk mahasiswa dan alumni berkarya bersama. Dari ide kecil hingga startup, mari wujudkan
+                    inovasi nyata untuk masa depan.
                   </p>
                 </div>
               </div> <!-- End Icon Box -->
