--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Kawan Kampus</title>
+  <title>KawanKampus</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Kawan Kampus</h1>
+        <h1 class="sitename">KawanKampus</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -95,12 +95,12 @@
           </div>
 
           <div class="col-lg-6  d-flex flex-column justify-content-center" data-aos="fade-in">
-            <h1>Gabut dengan <span>Kawan Kampus</span></h1>
-            <p>Kami adalah anak gembala, selalu riang serta ngampus</p>
+            <h1>Semua Aktivitas Kampus dalam Satu Aplikasi: <span>KawanKampus</span></h1>
+            <p>Dari nebeng, jajan, mentoring, sampai cari lowongan kerja — semuanya bisa kamu temukan di sini.</p>
             <div class="d-flex">
-              <a href="#about" class="btn-get-started">Get Started</a>
+              <a href="#about" class="btn-get-started">Mulai Sekarang</a>
               <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
-                class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch
+                class="glightbox btn-watch-video d-flex align-items-center" target="_blank"><i class="bi bi-play-circle"></i><span>Watch
                   Video</span></a>
             </div>
           </div>
@@ -133,9 +133,9 @@
         <div class="row align-items-xl-center gy-5">
 
           <div class="col-xl-5 content">
-            <h3>Tentang Kawan Kampus</h3>
-            <h2>Kawan Kampus adalah ruang kolaborasi mahasiswa dan alumni untuk berkembang bersama.</h2>
-            <p>Kawan Kampus hadir sebagai sarana digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus
+            <h3>Tentang KawanKampus</h3>
+            <h2>KawanKampus adalah ruang kolaborasi mahasiswa dan alumni untuk berkembang bersama.</h2>
+            <p>KawanKampus hadir sebagai sarana digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus
               dalam satu ekosistem pembelajaran. Melalui platform ini, kami membantu mahasiswa menemukan inspirasi,
               berbagi pengalaman, dan memperluas jejaring profesional. Tidak hanya itu, alumni juga dapat berkontribusi
               dengan berbagi ilmu, membuka peluang karir, serta menjadi mentor bagi generasi berikutnya.</p>
@@ -652,7 +652,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/system/29666196ed6900f07fc4f4af4738bffe.webp" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/pakiswandi.png" class="img-fluid picteam" alt="Iswandi Saputra"></div>
               <div class="member-info">
                 <h4>Iswandi Saputra</h4>
                 <span>Product Manager</span>
@@ -668,7 +668,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="https://risyadcode.my.id/img/about.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/ibrahimrisyad.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Ibrahim Risyad</h4>
                 <span>Co-Founder</span>
@@ -684,7 +684,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/71d5bc3860e7777c99ef942396ca7128.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/71d5bc3860e7777c99ef942396ca7128.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Jovita Nada Syahira</h4>
                 <span>CMO</span>
@@ -906,11 +906,11 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Kawan Kampus</span>
+            <span class="sitename">KawanKampus</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>Universitas Andalas, Padang</p>
-            <p>Sumatera Barat, NY 535022</p>
+            <p>KawanKampus, Padang</p>
+            <p>Sumatera Barat, Indonesia 25568</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p>
           </div>
@@ -959,7 +959,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Kawan Kampus</strong> <span>All Rights Reserved</span>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Bootslander</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
