--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="col-xl-5 content">
             <h3>Tentang KawanKampus</h3>
             <h2>KawanKampus adalah ruang kolaborasi mahasiswa dan alumni untuk berkembang bersama.</h2>
-            <p>KawanKampus hadir sebagai sarana digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus
+            <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">KawanKampus hadir sebagai sarana digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus
               dalam satu ekosistem pembelajaran. Melalui platform ini, kami membantu mahasiswa menemukan inspirasi,
               berbagi pengalaman, dan memperluas jejaring profesional. Tidak hanya itu, alumni juga dapat berkontribusi
               dengan berbagi ilmu, membuka peluang karir, serta menjadi mentor bagi generasi berikutnya.</p>
@@ -149,7 +149,7 @@
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
                   <h3>Jejaring Kampus</h3>
-                  <p>Bangun relasi dengan mahasiswa dan alumni lintas jurusan serta angkatan. Dapatkan koneksi yang
+                  <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Bangun relasi dengan mahasiswa dan alumni lintas jurusan serta angkatan. Dapatkan koneksi yang
                     bermanfaat untuk karir dan pengembangan diri.</p>
                 </div>
               </div> <!-- End Icon Box -->
@@ -158,7 +158,7 @@
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
                   <h3>Belajar & Berbagi</h3>
-                  <p>Temukan berbagai sumber ilmu, diskusi komunitas, hingga pengalaman alumni. Belajar jadi lebih mudah
+                  <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Temukan berbagai sumber ilmu, diskusi komunitas, hingga pengalaman alumni. Belajar jadi lebih mudah
                     dengan dukungan dari sesama.</p>
                 </div>
               </div> <!-- End Icon Box -->
@@ -167,7 +167,7 @@
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
                   <h3>Peluang Karir</h3>
-                  <p>Akses informasi magang, kerja, hingga project kolaborasi dari alumni dan mitra industri. Jadikan
+                  <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Akses informasi magang, kerja, hingga project kolaborasi dari alumni dan mitra industri. Jadikan
                     kampus sebagai gerbang menuju dunia kerja.</p>
                 </div>
               </div> <!-- End Icon Box -->
@@ -176,7 +176,7 @@
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
                   <h3>Kolaborasi & Inovasi</h3>
-                  <p>Wadah untuk mahasiswa dan alumni berkarya bersama. Dari ide kecil hingga startup, mari wujudkan
+                  <p style="text-align: justify;">Wadah untuk mahasiswa dan alumni berkarya bersama. Dari ide kecil hingga startup, mari wujudkan
                     inovasi nyata untuk masa depan.
                   </p>
                 </div>
