minor change :primary color and language

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="#beranda" class="active">Beranda</a></li>
+          <li><a href="#tentang">Tentang</a></li>
+          <li><a href="#fitur">Fitur</a></li>
+          <li><a href="#galeri">Galeri</a></li>
+          <li><a href="#tim">Tim</a></li>
           <!-- <li><a href="#pricing">Pricing</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -74,7 +74,7 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Kontak</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -85,7 +85,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section dark-background">
+    <section id="beranda" class="hero section dark-background">
       <img src="assets/img/hero-bg-2.jpg" alt="" class="hero-bg">
 
       <div class="container">
@@ -127,7 +127,7 @@
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <section id="tentang" class="about section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row align-items-xl-center gy-5">
@@ -191,95 +191,81 @@
     </section><!-- /About Section -->
 
     <!-- Features Section -->
-    <section id="features" class="features section">
+    <section id="fitur" class="features section">
 
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="features-item">
-              <i class="bi bi-eye" style="color: #ffbb2c;"></i>
-              <h3><a href="" class="stretched-link">Lorem Ipsum</a></h3>
-            </div>
-          </div><!-- End Feature Item -->
-
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="features-item">
-              <i class="bi bi-infinity" style="color: #5578ff;"></i>
-              <h3><a href="" class="stretched-link">Dolor Sitema</a></h3>
-            </div>
-          </div><!-- End Feature Item -->
-
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="features-item">
               <i class="bi bi-mortarboard" style="color: #e80368;"></i>
-              <h3><a href="" class="stretched-link">Sed perspiciatis</a></h3>
+              <h3><a href="" class="stretched-link">KawanMentor</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
-              <i class="bi bi-nut" style="color: #e361ff;"></i>
-              <h3><a href="" class="stretched-link">Magni Dolores</a></h3>
+              <i class="bi bi-bicycle" style="color: #e361ff;"></i>
+              <h3><a href="" class="stretched-link">KawanNebeng</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="features-item">
-              <i class="bi bi-shuffle" style="color: #47aeff;"></i>
-              <h3><a href="" class="stretched-link">Nemo Enim</a></h3>
+              <i class="bi bi-cash" style="color: #47aeff;"></i>
+              <h3><a href="" class="stretched-link">Tracking Keuangan</a></h3>
+            </div>
+          </div><!-- End Feature Item -->
+          
+          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="700">
+            <div class="features-item">
+              <i class="bi bi-x-diamond" style="color: #11dbcf;"></i>
+              <h3><a href="" class="stretched-link">KawanLowongan</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="features-item">
-              <i class="bi bi-star" style="color: #ffa76e;"></i>
-              <h3><a href="" class="stretched-link">Eiusmod Tempor</a></h3>
+              <i class="bi bi-egg-fried" style="color: #ffa76e;"></i>
+              <h3><a href="" class="stretched-link">KawanKantin</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="700">
-            <div class="features-item">
-              <i class="bi bi-x-diamond" style="color: #11dbcf;"></i>
-              <h3><a href="" class="stretched-link">Midela Teren</a></h3>
-            </div>
-          </div><!-- End Feature Item -->
-
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="800">
+          <!-- <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="800">
             <div class="features-item">
               <i class="bi bi-camera-video" style="color: #4233ff;"></i>
               <h3><a href="" class="stretched-link">Pira Neve</a></h3>
             </div>
-          </div><!-- End Feature Item -->
+          </div> --><!-- End Feature Item -->
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="900">
+          <!-- <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="900">
             <div class="features-item">
               <i class="bi bi-command" style="color: #b2904f;"></i>
               <h3><a href="" class="stretched-link">Dirada Pack</a></h3>
             </div>
-          </div><!-- End Feature Item -->
+          </div> --><!-- End Feature Item -->
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1000">
+          <!-- <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1000">
             <div class="features-item">
               <i class="bi bi-dribbble" style="color: #b20969;"></i>
               <h3><a href="" class="stretched-link">Moton Ideal</a></h3>
             </div>
-          </div><!-- End Feature Item -->
+          </div> --><!-- End Feature Item -->
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1100">
+          <!-- <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1100">
             <div class="features-item">
               <i class="bi bi-activity" style="color: #ff5828;"></i>
               <h3><a href="" class="stretched-link">Verdo Park</a></h3>
             </div>
-          </div><!-- End Feature Item -->
+          </div> --><!-- End Feature Item -->
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1200">
+         <!--  <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1200">
             <div class="features-item">
               <i class="bi bi-brightness-high" style="color: #29cc61;"></i>
               <h3><a href="" class="stretched-link">Flavor Nivelanda</a></h3>
             </div>
-          </div><!-- End Feature Item -->
+          </div> --><!-- End Feature Item -->
 
         </div>
 
@@ -299,7 +285,7 @@
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Happy Clients</p>
+              <p>Pengguna Bahagia</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -308,7 +294,7 @@
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Projects</p>
+              <p>Bimbingan Tugas</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -317,7 +303,7 @@
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <p>Pelayanan Admin</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -326,7 +312,7 @@
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1"
                 class="purecounter"></span>
-              <p>Hard Workers</p>
+              <p>Mitra</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -430,7 +416,7 @@
     </section><!-- /Details Section -->
 
     <!-- Gallery Section -->
-    <section id="gallery" class="gallery section">
+    <section id="galeri" class="gallery section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -638,7 +624,7 @@
     </section><!-- /Testimonials Section -->
 
     <!-- Team Section -->
-    <section id="team" class="team section">
+    <section id="tim" class="team section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -824,8 +810,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <div><span>Check Our</span> <span class="description-title">Contact</span></div>
+        <h2>Kontak</h2>
+        <div><span>Hubungi</span> <span class="description-title">Kontak</span> <span>Kami</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
@@ -836,23 +822,23 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
-                <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h3>Alamat</h3>
+                <p>INATECHNO TRAINING CENTER, Kota Padang, Sumatera Barat 25568</p>
               </div>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <h3>Hubungi kami</h3>
+                <p>+62 823-1144-5674</p>
               </div>
             </div><!-- End Info Item -->
 
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
+                <h3>Email kami</h3>
                 <p>info@example.com</p>
               </div>
             </div><!-- End Info Item -->
@@ -885,7 +871,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Kirim Pesan</button>
                 </div>
 
               </div>
@@ -911,7 +897,7 @@
           <div class="footer-contact pt-3">
             <p>KawanKampus, Padang</p>
             <p>Sumatera Barat, Indonesia 25568</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p class="mt-3"><strong>No. Telp:</strong> <span>+62 823-1144-5674</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
@@ -922,7 +908,7 @@
           </div>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
+        <!-- <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><a href="#">Home</a></li>
@@ -931,24 +917,24 @@
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
-        </div>
+        </div> -->
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Layanan kami</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">KawanMentor</a></li>
+            <li><a href="#">KawanNebeng</a></li>
+            <li><a href="#">Tracking Keuangan</a></li>
+            <li><a href="#">KawanLowongan</a></li>
+            <li><a href="#">KawanKantin</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12 footer-newsletter">
-          <h4>Our Newsletter</h4>
-          <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-          <form action="forms/newsletter.php" method="post" class="php-email-form">
-            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
+          <h4>Berita kami</h4>
+          <p>Ikuti berita kami dan dapatkan kabar terbaru tentang produk dan layanan kami!</p>
+          <form method="post" class="php-email-form">
+            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Ikuti"></div>
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
