--- a/index.html
+++ b/index.html
@@ -643,10 +643,10 @@
                 <h4>Iswandi Saputra</h4>
                 <span>Product Manager</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/67iswandisaputra"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/67iswandisaputra" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -659,10 +659,10 @@
                 <h4>Ibrahim Risyad</h4>
                 <span>Co-Founder</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/ibrahimrisyady"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/ibrahimrisyady" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -676,10 +676,10 @@
                 <span>CMO</span>
 
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/ibrahimrisyady"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/ibrahimrisyady" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -687,15 +687,15 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/98ba1aad36e56296fcf6e3b3beff3aea.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/98ba1aad36e56296fcf6e3b3beff3aea.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Marzah Gul</h4>
                 <span>Co-Founder</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -703,15 +703,15 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/00821f3e236b21797c8b995a534ffd31.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/00821f3e236b21797c8b995a534ffd31.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Muhammad Aqillah Paligie</h4>
                 <span>Co-Founder</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -719,15 +719,15 @@
           
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/c78b92a3d1e3ec1ebb79f717a9bcc398.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/c78b92a3d1e3ec1ebb79f717a9bcc398.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Uzunu Khaira</h4>
                 <span>Co-Founder</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/uk_fearnot"><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/uk_fearnot" target="_blank"><i class="bi bi-instagram"></i></a>
+                  <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
