--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
-                  <i class="bi bi-buildings"></i>
+                  <i class="bi bi-people"></i>
                   <h3>Jejaring Kampus</h3>
                   <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Bangun relasi dengan mahasiswa dan alumni lintas jurusan serta angkatan. Dapatkan koneksi yang
                     bermanfaat untuk karir dan pengembangan diri.</p>
@@ -156,7 +156,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
-                  <i class="bi bi-clipboard-pulse"></i>
+                  <i class="bi bi-book"></i>
                   <h3>Belajar & Berbagi</h3>
                   <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Temukan berbagai sumber ilmu, diskusi komunitas, hingga pengalaman alumni. Belajar jadi lebih mudah
                     dengan dukungan dari sesama.</p>
@@ -165,7 +165,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
-                  <i class="bi bi-command"></i>
+                  <i class="bi bi-briefcase"></i>
                   <h3>Peluang Karir</h3>
                   <p style="text-align: justify; text-justify: inter-word; hyphens: auto;">Akses informasi magang, kerja, hingga project kolaborasi dari alumni dan mitra industri. Jadikan
                     kampus sebagai gerbang menuju dunia kerja.</p>
@@ -174,7 +174,7 @@
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
-                  <i class="bi bi-graph-up-arrow"></i>
+                  <i class="bi bi-rocket-takeoff"></i>
                   <h3>Kolaborasi & Inovasi</h3>
                   <p style="text-align: justify;">Wadah untuk mahasiswa dan alumni berkarya bersama. Dari ide kecil hingga startup, mari wujudkan
                     inovasi nyata untuk masa depan.
