change color and add image

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="beranda" class="hero section dark-background">
+    <section id="beranda" class="hero section dark-alter-background">
       <img src="assets/img/hero-bg-2.jpg" alt="" class="hero-bg">
 
       <div class="container">
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+            <img src="assets/img/landingpage.png" class="img-fluid animated" alt="">
           </div>
 
           <div class="col-lg-6  d-flex flex-column justify-content-center" data-aos="fade-in">
@@ -499,7 +499,7 @@
     </section><!-- /Gallery Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section dark-background">
+    <section id="testimonials" class="testimonials section dark-alter-background">
 
       <img src="assets/img/testimonials-bg.jpg" class="testimonials-bg" alt="">
 
@@ -659,7 +659,7 @@
                 <h4>Ibrahim Risyad</h4>
                 <span>Co-Founder</span>
                 <div class="social">
-                  <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                  <!-- <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a> -->
                   <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
                   <a href="https://www.instagram.com/ibrahimrisyady" target="_blank"><i class="bi bi-instagram"></i></a>
                   <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -673,11 +673,11 @@
               <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/71d5bc3860e7777c99ef942396ca7128.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Jovita Nada Syahira</h4>
-                <span>CMO</span>
+                <span>Co-Founder</span>
 
                 <div class="social">
                   <a href="" target="_blank"><i class="bi bi-twitter-x"></i></a>
-                  <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <!-- <a href="" target="_blank"><i class="bi bi-facebook"></i></a> -->
                   <a href="https://www.instagram.com/ibrahimrisyady" target="_blank"><i class="bi bi-instagram"></i></a>
                   <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -687,7 +687,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/98ba1aad36e56296fcf6e3b3beff3aea.jpg" class="img-fluid picteam" alt=""></div>
+              <div class="pic"><img src="assets/img/team/agul.jpg" class="img-fluid picteam" alt="Marzah Gul"></div>
               <div class="member-info">
                 <h4>Marzah Gul</h4>
                 <span>Co-Founder</span>
@@ -886,7 +886,7 @@
 
   </main>
 
-  <footer id="footer" class="footer dark-background">
+  <footer id="footer" class="footer dark-alter-background">
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -934,7 +934,7 @@
           <h4>Berita kami</h4>
           <p>Ikuti berita kami dan dapatkan kabar terbaru tentang produk dan layanan kami!</p>
           <form method="post" class="php-email-form">
-            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Ikuti"></div>
+            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Langganan"></div>
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Your subscription request has been sent. Thank you!</div>
