--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
           
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="https://inatechno.id/uploads/user_image/optimized/c78b92a3d1e3ec1ebb79f717a9bcc398.jpg" class="img-fluid picteam" alt=""></div>
+              <div class="pic"><img src="assets/img/team/uzunu.jpg" class="img-fluid picteam" alt=""></div>
               <div class="member-info">
                 <h4>Uzunu Khaira</h4>
                 <span>Co-Founder</span>
@@ -724,7 +724,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center order-2 order-lg-1">
 
             <div class="content px-xl-5" data-aos="fade-up" data-aos-delay="100">
-              <h3><span>Yang Sering</span><strong>Ditanyakan</strong></h3>
+              <h3><span>Yang Sering</span> <strong>Ditanyakan</strong></h3>
               <p>
                 KawanKampus adalah ekosistem digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus melalui berbagai aplikasi penunjang, seperti KawanMentor, KawanNebeng, Tracker Keuangan, KawanLowongan, KawanKantin, KawanForum.
               </p>
@@ -844,7 +844,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Pesan anda telah terkirim. Terima kasih!</div>
 
-                  <button type="submit">Kirim Pesan</button>
+                  <button type="button">Kirim Pesan</button>
                 </div>
 
               </div>
@@ -907,7 +907,7 @@
           <h4>Berita kami</h4>
           <p>Ikuti berita kami dan dapatkan kabar terbaru tentang produk dan layanan kami!</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
-            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Langganan"></div>
+            <div class="newsletter-form"><input type="email" name="email"><input type="button" value="Langganan"></div>
             <div class="loading">Memuat...</div>
             <div class="error-message"></div>
             <div class="sent-message">Anda sudah berlangganan. Terima kasih!</div>
