--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="features-item">
               <i class="bi bi-cash" style="color: #47aeff;"></i>
-              <h3><a href="#fitur" class="stretched-link">Tracking Keuangan</a></h3>
+              <h3><a href="#fitur" class="stretched-link">KawanUang</a></h3>
             </div>
           </div><!-- End Feature Item -->
           
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="700">
             <div class="features-item">
-              <i class="bi bi-x-diamond" style="color: #11dbcf;"></i>
-              <h3><a href="#fitur" class="stretched-link">KawanLowongan</a></h3>
+              <i class="bi bi-briefcase" style="color: #11dbcf;"></i>
+              <h3><a href="#fitur" class="stretched-link">KawanKarier</a></h3>
             </div>
           </div><!-- End Feature Item -->
 
@@ -376,12 +376,12 @@
           </div>
         </div><!-- Features Item -->
 
-        <div class="row gy-4 align-items-center features-item" id="trackerkeuangan">
+        <div class="row gy-4 align-items-center features-item" id="kawanuang">
           <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/Tracker keuangan.png" class="img-fluid" alt="">
+            <img src="assets/img/KawanUang.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
-            <h3>Tracker Keuangan</h3>
+            <h3>KawanUang</h3>
             <p class="fst-italic">
               Aplikasi untuk mengatur finansial dan pengeluaran mahasiswa.
             </p>
@@ -394,12 +394,12 @@
           </div>
         </div><!-- Features Item -->
 
-        <div class="row gy-4 align-items-center features-item" id="kawanlowongan">
+        <div class="row gy-4 align-items-center features-item" id="kawankarier">
           <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
             <img src="assets/img/details-2.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
-            <h3>KawanLowongan</h3>
+            <h3>KawanKarier</h3>
             <p class="fst-italic">
               Aplikasi portal karir dan lowongan kerja untuk mahasiswa dan alumni.
             </p>
@@ -456,7 +456,7 @@
     <!-- <section id="galeri" class="gallery section"> -->
 
       <!-- Section Title -->
-     <!--  <div class="container section-title" data-aos="fade-up">
+      <<!-- div class="container section-title" data-aos="fade-up">
         <h2>Gallery</h2>
         <div><span>Check Our</span> <span class="description-title">Gallery</span></div>
       </div> --><!-- End Section Title -->
@@ -554,7 +554,7 @@
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   <span>
-                    Lewat KawanLowongan, saya bisa membagikan info pekerjaan ke adik tingkat. Senang sekali bisa berkontribusi membuka peluang karir.
+                    Lewat KawanKarier, saya bisa membagikan info pekerjaan ke adik tingkat. Senang sekali bisa berkontribusi membuka peluang karir.
                   </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
@@ -605,7 +605,7 @@
 
       </div>
 
-    </section><!-- /Testimonials Section -->
+    </section><!-- Testimonials Section -->
 
     <!-- Team Section -->
     <section id="tim" class="team section">
@@ -736,7 +736,7 @@
             <div class="content px-xl-5" data-aos="fade-up" data-aos-delay="100">
               <h3><span>Yang Sering</span> <strong>Ditanyakan</strong></h3>
               <p>
-                KawanKampus adalah ekosistem digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus melalui berbagai aplikasi penunjang, seperti KawanMentor, KawanNebeng, Tracker Keuangan, KawanLowongan, KawanKantin, KawanForum.
+                KawanKampus adalah ekosistem digital yang menghubungkan mahasiswa, alumni, dan komunitas kampus melalui berbagai aplikasi penunjang, seperti KawanMentor, KawanNebeng, KawanUang, KawanKarier, KawanKantin, KawanForum.
               </p>
             </div>
 
@@ -766,10 +766,10 @@
 
               <div class="faq-item">
                 <i class="faq-icon bi bi-question-circle"></i>
-                <h3>Bagaimana Tracker Keuangan membantu mahasiswa?</h3>
+                <h3>Bagaimana KawanUang membantu mahasiswa?</h3>
                 <div class="faq-content">
                   <p>
-                    Tracker Keuangan membantu mencatat pemasukan dan pengeluaran harian, membuat anggaran bulanan, serta memberikan laporan dalam bentuk grafik agar mahasiswa bisa lebih hemat dan teratur.
+                    KawanUang membantu mencatat pemasukan dan pengeluaran harian, membuat anggaran bulanan, serta memberikan laporan dalam bentuk grafik agar mahasiswa bisa lebih hemat dan teratur.
                   </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
@@ -786,7 +786,7 @@
 
       </div>
 
-    </section><!-- /Faq Section -->
+    </section><!-- Faq Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -865,7 +865,7 @@
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section><!-- Contact Section -->
 
   </main>
 
@@ -907,8 +907,8 @@
           <ul>
             <li><a href="#kawanmentor">KawanMentor</a></li>
             <li><a href="#kawannebeng">KawanNebeng</a></li>
-            <li><a href="#trackerkeuangan">Tracker Keuangan</a></li>
-            <li><a href="#kawanlowongan">KawanLowongan</a></li>
+            <li><a href="#kawanuang">KawanUang</a></li>
+            <li><a href="#kawankarier">KawanKarier</a></li>
             <li><a href="#kawankantin">KawanKantin</a></li>
             <li><a href="#kawanforum">KawanForum</a></li>
           </ul>
