change youtube link & testimonials background

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p>Dari nebeng, jajan, mentoring, sampai cari lowongan kerja — semuanya bisa kamu temukan di sini.</p>
             <div class="d-flex">
               <a href="#tentang" class="btn-get-started">Mulai Sekarang</a>
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
+              <a href="https://www.youtube.com/watch?v=yiDPHRJaj90"
                 class="glightbox btn-watch-video d-flex align-items-center" target="_blank"><i class="bi bi-play-circle"></i><span>Tonton Video</span>
               </a>
             </div>
@@ -424,7 +424,7 @@
             <ul>
               <li><i class="bi bi-check"></i> <span>Pesan makanan/minuman dari kantin dan warung terdekat.</span></li>
               <li><i class="bi bi-check"></i> <span>Fitur menu lengkap dengan harga & review mahasiswa.</span></li>
-              <li><i class="bi bi-check"></i> <span>Bisa pilih antar ke kos/kelas atau ambil langsung di kantin.</span>.</li>
+              <li><i class="bi bi-check"></i> <span>Bisa pilih antar ke kos/kelas atau ambil langsung di kantin.</span></li>
             </ul>
           </div>
         </div><!-- Features Item -->
@@ -442,8 +442,8 @@
             <ul>
               <li><i class="bi bi-check"></i> <span>Diskusi terbuka seputar mata kuliah, organisasi, atau isu terkini.</span></li>
               <li><i class="bi bi-check"></i> <span>Alumni, mahasiswa, dan dosen bisa ikut berkontribusi.</span></li>
-              <li><i class="bi bi-check"></i> <span>Sistem upvote komentar untuk menyoroti jawaban terbaik.</span>.</li>
-              <li><i class="bi bi-check"></i> <span>Tempat bertukar pengalaman dan inspirasi antar civitas kampus.</span>.</li>
+              <li><i class="bi bi-check"></i> <span>Sistem upvote komentar untuk menyoroti jawaban terbaik.</span></li>
+              <li><i class="bi bi-check"></i> <span>Tempat bertukar pengalaman dan inspirasi antar civitas kampus.</span></li>
             </ul>
           </div>
         </div><!-- Features Item -->
@@ -456,7 +456,7 @@
     <!-- <section id="galeri" class="gallery section"> -->
 
       <!-- Section Title -->
-      <<!-- div class="container section-title" data-aos="fade-up">
+      <!-- div class="container section-title" data-aos="fade-up">
         <h2>Gallery</h2>
         <div><span>Check Our</span> <span class="description-title">Gallery</span></div>
       </div> --><!-- End Section Title -->
