--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website">
 
   <!-- Favicons -->
-  <link href="assets/img/Logo kk1.jpg" rel="icon">
+  <link href="assets/img/kk_png copy.png" rel="icon">
   <link href="assets/img/Logo kk.jpg" rel="logo kawankampus">
 
   <!-- Fonts -->
@@ -458,7 +458,7 @@
             <!-- <img src="assets/img/details-4.png" class="img-fluid" alt=""> -->
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
-            <h3>KawanForum</h3>
+            <h3>KawanKoneksi</h3>
             <p class="fst-italic">
               Platform diskusi dan berbagai ide, mirip Quora versi kampus.
             </p>
